// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NameEdit component matches snapshot 1`] = `
<div
  className="components-base-control caldera-name-hello-edit"
>
  <div
    className="components-base-control__field"
  >
    <label
      className="components-base-control__label"
      htmlFor="inspector-text-control-0"
    >
      Name
    </label>
    <input
      aria-describedby={undefined}
      className="components-text-control__input"
      id="inspector-text-control-0"
      onChange={[Function]}
      type="text"
      value="Roy"
    />
  </div>
</div>
`;

exports[`SalutationEdit component matches snapshot 1`] = `
<div
  className="components-base-control caldera-salutation-hello-edit"
>
  <div
    className="components-base-control__field"
  >
    <label
      className="components-base-control__label"
      htmlFor="inspector-text-control-2"
    >
      Salutation!
    </label>
    <input
      aria-describedby={undefined}
      className="components-text-control__input"
      id="inspector-text-control-2"
      onChange={[Function]}
      type="text"
      value="Hi"
    />
  </div>
</div>
`;
